# devagent

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  aliases.sh  install_devagent.sh  pyproject.toml  start.sh
src/devagent/: audit.py  checks.py  cli.py  config.py  constants.py  context.py  creds.py  diffreview.py  executor.py  gitops.py  gui.css  gui.py  hooks.py  indexer.py  jail.py  llm.py  logging.py  openrouter.py  patch.py  patcher.py  planner.py  policies.py  repl.py  res.py  sandbox.py  scanner.py  schemas.py  session.py  tasks.py  tester.py  transcript.py  utils.py  validation.py  verifier.py
src/devagent/logging/: __init__.py  logger.py
src/devagent/prompts/: charter.md  format_note.txt  planner.md  playbook_generic.md
src/devagent/templates/: goal_conflicts.txt  goal_lint_fix.txt  goal_review.txt  goal_test.txt  system_plan.txt  user_plan.txt
src/devagent/tui/: app.py
tests/: __init__.py  conftest.py  test_cli_flow_lintfix.py  test_cli_headless_prompt.py  test_cli_scan_and_approve.py  test_config_load.py  test_executor_errors_and_content.py  test_executor_preview.py  test_executor_trash.py  test_hooks_block.py  test_hooks_timeout.py  test_integration.py  test_jail.py  test_llm.py  test_patcher_git_apply.py  test_patcher_git_apply_fail.py  test_preview_diffs.py  test_scanner.py  test_utils.py  test_utils_core.py  test_validation.py  test_verifier.py  test_verifier_edges.py  test_verifier_shell.py
