[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devagent"
version = "0.1.0"
description = "Terminal-AI-Agent with safe planning/execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "rich>=13.7",
  "httpx>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "unidiff>=0.7",
]

[project.scripts]
devagent = "devagent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"devagent" = ["templates/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
